[project]
name = "oracle_rman_db_sizing"
version = "0.1.0"
description = "Experimental tool to size Oracle RMAN backups"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pipreqs>=0.5.0",
    "plotly>=6.0.1",
    "streamlit>=1.45.1",
]
